# IEEE-SoutheastCon-2019-Software

./: .gitignore  .gitmodules  README.md  circle.py  test.py
Archived/GazeboSimulation/: README.md
Archived/GazeboSimulation/models/arena/: model.sdf
Archived/GazeboSimulation/models/badbot/: custom.sdf  model.config  model.sdf  temp.scad
Archived/GazeboSimulation/models/debrisCube/: model.config  model.sdf
Archived/GazeboSimulation/models/debrisSphere/: model.config
Archived/GazeboSimulation/models/spacetels/: model.sdf
Archived/GazeboSimulation/plugins/: CMakeLists.txt  debris.cc  scoreEngine.cc
Archived/test_platform/basic_movement/: basic_movement.ino
ArduinoROS/libraries/ros_lib/mrpt_msgs/: GetCMGraph.h  GraphConstraint.h  GraphSlamAgent.h  GraphSlamAgents.h  GraphSlamStats.h  NetworkOfPoses.h  NodeIDWithLaserScan.h  NodeIDWithPose.h  NodeIDWithPose_vec.h  ObservationRangeBeacon.h  ObservationRangeBearing.h  SingleRangeBeaconObservation.h  SingleRangeBearingObservation.h
ArduinoROS/libraries/ros_lib/opencv_node/: object.h  vision_msg.h
ArduinoSerial/: ArduinoSerial.cpp  ArduinoSerial.h  serialWrite.py
Competition-Programs/round1-code/: round1-code.ino
Competition-Programs/round2code/: round2code.ino
GazeboSimulation/models/arena/meshes/: arena.dae  arena.scad  arena.stl  center.stl
GazeboSimulation/models/badbot/: maybe.scad
GazeboSimulation/models/badbot/meshes/: chassis.stl  chassisCollision.stl  wheel.stl
GazeboSimulation/models/debrisCube/meshes/: cubeBlue.dae  cubeRed.dae
GazeboSimulation/models/debrisSphere/: model.sdf
GazeboSimulation/models/debrisSphere/meshes/: README  sphereBlue.dae  sphereGreen.dae  sphereRed.dae
GazeboSimulation/models/spacetels/: model.config
GazeboSimulation/models/spacetels/meshes/: spacetels.stl
GazeboSimulation/plugins/: skidSteer.cc
GazeboSimulation/plugins/msgs/: CMakeLists.txt  scoreinfo.proto
GazeboSimulation/world/: data.csv  graph.py  world.sdf
Main-Program-1/: CMakeLists.txt  README.md  a.out  main.cpp  readme.md
Main-Program-1/Arduino-Serial/: ArduinoSerial.cpp  ArduinoSerial.h  SerialForArduino.ino  qwop.py
Main-Program-1/Arduino-Serial/DualMotorPWMSerialControl/: DualMotorPWMSerialControl.ino
Main-Program-1/Arduino-Serial/SerialForArduino/: SerialForArduino.ino
Main-Program-1/Arduino-Serial/SmartDriveDuo-Serial-Pi/: SmartDriveDuo-Serial-Pi.ino
Main-Program-1/Arduino-Serial/SmartDriveDuo_Serial_Pi/: SmartDriveDuo_Serial_Pi.ino
Main-Program-1/Vision-Processing/: .goutputstream-IJKKXZ  vision.cpp
Main-Program-2/: .readme.md.swp  README.md  cock.py  initialPosePublish.py  odom.py  readme.md
Main-Program-2/devel/: .catkin  .rosinstall  setup.sh
Main-Program-2/devel/include/opencv_node/: object.h  vision_msg.h
Main-Program-2/devel/lib/beginner_tutorials/: listener  talker
Main-Program-2/devel/lib/main_node/: listener1  main  talker1
Main-Program-2/devel/lib/opencv_node/: vision_talker
Main-Program-2/devel/lib/pkgconfig/: beginner_tutorials.pc  main_node.pc  opencv_node.pc  razor_imu_9dof.pc
Main-Program-2/mymap/: spacetels.pgm  yes.pgm  yes.yaml
Main-Program-2/src/2dnav/: costmap_common_params.yaml  local_costmap_params.yaml  package.xml  robot_configuration.launch
Main-Program-2/src/Arduino-Serial/Arduino_SRC/: Arduino_SRC.ino
Main-Program-2/src/ArduinoCode/: ArduinoCode.ino
Main-Program-2/src/amcl_transform/: CMakeLists.txt  package.xml
Main-Program-2/src/arduinoSerialPy/: CMakeLists.txt  package.xml
Main-Program-2/src/arduinoSerialPy/src/: arduinoSerialPy.py
Main-Program-2/src/arduino_talker/: CMakeLists.txt  package.xml
Main-Program-2/src/arduino_talker/src/: arduino_talker.cpp
Main-Program-2/src/arduino_talker/src/Arduino-Serial/: ArduinoSerial.cpp
Main-Program-2/src/bb_loc/: CMakeLists.txt  package.xml
Main-Program-2/src/bb_loc/src/: main.cpp
Main-Program-2/src/beginner_tutorials/: package.xml
Main-Program-2/src/dumb_main/: CMakeLists.txt  package.xml
Main-Program-2/src/dumb_main/src/: move.py
Main-Program-2/src/ieee_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  ftc_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.launch  package.xml
Main-Program-2/src/main_node/: CMakeLists.txt  package.xml
Main-Program-2/src/main_node/launch/: main.launch  razorLaunchStuff
Main-Program-2/src/main_node/src/: ftc.cpp  main.cpp  main.cpp.save
Main-Program-2/src/main_node/src/Arduino-Serial/: ArduinoSerial.cpp  ArduinoSerial.h  ArduinoSerialv2.cpp  ArduinoSerialv2.h
Main-Program-2/src/main_node/src/Arduino-Serial/Arduino_SRC/: Arduino_SRC.ino
Main-Program-2/src/main_node/src/Arduino-Serial/Arduino_SRC/arduino-board/: slave.cpp  slave.h
Main-Program-2/src/odometry_publisher/: CMakeLists.txt  odometry_publisher.launch
Main-Program-2/src/opencv_node/: CMakeLists.txt  package.xml
Main-Program-2/src/opencv_node/msg/: object.msg
Main-Program-2/src/opencv_node/src/: Vision3D.cpp  Vision3D.h  VisionConstants.h  WrapIterator.h  vision.cpp  vision_talker.cpp  vision_talker_old.txt
PCBDesign/PiHat/: RPi_GPIO.bak  RPi_GPIO.sch  RPi_Hat.kicad_pcb
Test-Programs/encoder/: encoder_test.c  encoder_test.cpp  encoder_test.h  encodertest.py
Test-Programs/localization/: YDLIDAR_ROS_Manual.docx
Test-Programs/localization/testMap/: CMakeLists.txt  data.txt  main.cpp
Test-Programs/potentiometer/potentiometer/: potentiometer.ino
Test-Programs/visual-processing/Block-Detection/: color-tracking.py  readme.md
Test-Programs/visual-processing/Simple-Tests/: camera-preview.py
launches/: SOS.sh  amcl.sh  amcl_diff.launch  drive.sh  ekf_template.launch  ekf_template2.launch  ftc.sh  map.sh  odom.sh  ros.sh  savemap.sh  startup.sh  test.launch  tf.sh
launches/params/: ekf_template.yaml  ekf_template2.yaml
localization/: LIDAR_ROSreadme.txt
visual-processing/Block-Detection/: CMakeLists.txt
visual-processing/Debris-Detection/: CMakeLists.txt  readme.md
visual-processing/Face-Detection/: facial-recog1.py
visual-processing/Simple-Tests/: test-video.py
(+97 files in other folders)
