<?xml version="1.0"?>
<package format="2">
  <name>bb_al</name>
  <version>0.0.0</version>
  <description>fuck amcl</description>
  <maintainer email="naj0016@auburn.edu">Alex Jones</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
