<?xml version="1.0"?>
<package format="2">
  <name>main_node</name>
  <version>0.0.0</version>
  <description>The main_node package</description>
  <maintainer email="mtc0030@auburn.edu">Matthew Castleberry</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  
  <build_depend>opencv_node</build_depend>
  <exec_depend>opencv_node</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
